--- a/less/home-page.less
+++ b/less/home-page.less
@@ -115,6 +115,7 @@
     border-top: 2px dashed @navigation-border;
     display: flex;
     align-content: space-between;
+    justify-content: space-around;
 
     .destination {
       width: 30%;
@@ -135,7 +136,7 @@
   }
 
   .btn {
-    .border-radius(15px, 20px);
+    .border-radius(15px, 15px);
 
   }
 }// home
